melhorias nos dois cdígos

--- a/calendario.html
+++ b/calendario.html
@@ -71,7 +71,7 @@
 
     <hr/> <!--faz divisoria -->
 
-    <label for="color">Escolha uma cor:</label>
+    label for="color">Escolha uma cor:</label>
     <select id="color" name="color">
         <option value="LightBlue">Azul</option>
         <option value="PaleGreen">Verde</option>
@@ -81,6 +81,13 @@
     <label for="day">Escolha o dia:</label>
     <input type="number" id="day" name="day" min="1" max="31">
     <input type="submit" onclick="coloriurDia()">
+</div>
+    <div class="legenda">
+        <p><span class ="azul"></span> Veículo 1</p>
+        <p><span class ="verde"></span> Veículo 2</p>
+        <p><span class ="rosa"></span> Veículo 3</p>
+        <p><span class ="roxo"></span> Veículo 4</p>
+    </div>
 
 </body>
 </html>
