--- a/calendario.html
+++ b/calendario.html
@@ -11,76 +11,88 @@
 <body>
     <h2>ABRIL-2024</h2>
     <table id="calendar">
-        <tbody>
-            <th class="domingo">Dom</th>
-            <th>Seg</th>
-            <th>Ter</th>
-            <th>Qua</th>
-            <th>Qui</th>
-            <th>Sex</th>
-            <th>Sab</th>
-        </tr>
-          <tr><!-- segunda linha -->
-            <td class="domingo"></td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-        </tr>
-        <tr><!-- terceira linha -->
-            <td class="domingo">7</td>
-            <td>8</td>
-            <td>9</td>
-            <td>10</td>
-            <td>11</td>
-            <td>12</td>
-            <td>13</td>
-        </tr>
-         <tr><!--quarta linha -->
-            <td class="domingo">14</td>
-            <td>15</td>
-            <td>16</td>
-            <td>17</td>
-            <td>18</td>
-            <td>19</td>
-            <td>20</td>
-        </tr>
-        <tr><!--quinta linha -->
-            <td class="domingo">21</td>
-            <td>22</td>
-            <td>23</td>
-            <td>24</td>
-            <td>25</td>
-            <td>26</td>
-            <td>27</td>
-        </tr>
-         <tr><!--sexta linha -->
-            <td class="domingo">28</td>
-            <td>29</td>
-            <td>30</td>
-            <td>🌛</td>
-            <td>🌑</td>
-            <td>🌜</td>
-            <td>🌕</td>
-        </tr>
+        <!--tabela-->
+        <body>
+            <!--corpo da tabela-->
+            <tr>
+                <!--(Primeira linha)cria uma linha-->
+                <th class="domingo">Dom</th>
+                <!--coluna-->
+                <th>Seg</th>
+                <th>Ter</th>
+                <th>Qua</th>
+                <th>Qui</th>
+                <th>Sex</th>
+                <th>Sab</th>
+            </tr>
+            <tr>
+                <!--Segunda linha-->
+                <th class="domingo"></th>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <!--Terceira linha-->
+                <td class="domingo">7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
+            </tr>
+            <tr>
+                <!--Quarta linha-->
+                <td class="domingo">14</td>
+                <td>15</td>
+                <td>16</td>
+                <td>17</td>
+                <td>18</td>
+                <td>19</td>
+                <td>20</td>
+            </tr>
+            <tr>
+                <!--Quinta linha-->
+                <td class="domingo">21</td>
+                <td>22</td>
+                <td>23</td>
+                <td>24</td>
+                <td>25</td>
+                <td>26</td>
+                <td>27</td>
+            </tr>
+            <tr>
+                <!--Sexta linha-->
+                <td class="domingo">28</td>
+                <td>29</td>
+                <td>30</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </body>
+    </div>
 
-        </tbody>
     </table>
 
-    <hr/> <!--faz divisoria -->
+<hr/>
+<label for="color">Escolha uma cor:</label>
+<select id="color" name="color">
+    <option value="LightBlue">Azul</option>
+    <option value="Palegreen">Verde</option>
+    <option value="LightPink">Rosa</option>
+    <option value="SlateBlue">Roxo</option>
+</select>
+<label for="day">Escolha o dia:</label>
+<input type="number" id="day" name="day" min="1" max="30">
+<input type="submit"onclick="colorirDia()">
 
-    label for="color">Escolha uma cor:</label>
-    <select id="color" name="color">
-        <option value="LightBlue">Azul</option>
-        <option value="PaleGreen">Verde</option>
-        <option value="LightPink">Rosa</option>
-        <option value="SlateBlue">Roxo</option>
-    </select>
-    <label for="day">Escolha o dia:</label>
-    <input type="number" id="day" name="day" min="1" max="31">
-    <input type="submit" onclick="coloriurDia()">
+
 </div>
     <div class="legenda">
         <p><span class ="azul"></span> Veículo 1</p>
